Unit 1 Update, unit 3 designs/test

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
-	<h1>ROXANNE MUSTAFA</h1>
-	<h2>Product Designer</h2>
-	<h3>Comminicate Effectively. Collaborate Efficiently. Create Efficaciously.</h3>
-	<hr>
+	<header id=heroimage>
+		<h1>ROXANNE MUSTAFA</h1>
+		<h2>Product Designer</h2>
+		<p id="byline">Effective Predator. Pack Designer. Hungry She-Wolf.</p>
+		<hr>
+	</header>
 
 	<div id="project">
 		<p>Project Section 1</p>
