updates after Jon 1:1

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -11,30 +11,61 @@
 			<p>Product Designer</p>
 		</div>
 		<nav>
-			<a href="#"></a>
-			<a href="#"></a>
-			<a href="#"></a>
+			<a href="Work"></a>
+			<a href="About Me"></a>
+			<a href="Contact"></a>
 		</nav>
 	</header>
+	
 	<section id="splash">
-		<h1 id="byline">Effective Predator. Pack Designer. Hungry She-Wolf.</h1>
+		<img src="images/direwolf.jpg" title="Direwolf" alt="Direwolf">
+		<h1 id="byline">Product Predator. Pack Designer. Hungry She-Wolf.</h1>
 		<hr>
 	</section>
-	<section id="gallery">
-		<h2></h2>
+
+	<section id="About Me">
+		<h2>About Me</h2>
+			<p>I work hard to turn an idea into a product that people can use. I have worked as a User Experience Designer and as a Product Designer for over five years. Understanding user journeies and needs, as well as stakeholder goals, and working with teams to create meaningful experiences is the essence of what I do. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:
+			<ul>
+				<li>Stakeholder Interviews</li>
+				<li>User Research</li>
+				<li>Competitive Analysis</li>
+				<li>Sketching</li>
+				<li>Prototyping</li>
+				<li>High Fildeity Mock-ups</li>
+				<li>Feature Prioritization</li>
+				<li>Lean Methodology</li>
+				<li>Agile Processess</li>
+				<li>Front-End Development</li>
+			</ol>
+			</p>
+	</section>
+	
+	<section id="Work">
+		<h2>Work</h2>
 		<section class="container">
-			<h3>Project Section 1</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h3>Liquid Lab</h3>
+			<p>Strategy and direction for users to get quick access to juice recipes and information.</p>
 			<a href="#" class="cta">See Project</a>
 		</section>
 		<section class="container">
-			<h3>Project Section 2</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h3>Coldwell Banker</h3>
+			<p>Digital Strategy formulti-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 		</section>
 		<section class="container">
-			<h3>Project Section 3</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h3>Dot Dash 3</h3>
+			<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 		</section>
 	</section>
+
+	<section id="Contact">
+		<h2>Contact</h2>
+			<p>Linkedin</p>
+			<p>twitter</p>
+			<p>email</p>
+	</section>		
+		
+	</section>
+
 </body>
 </html>
