Copy changes, section clean up add links

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -11,21 +11,22 @@
 			<p>Product Designer</p>
 		</div>
 		<nav>
-			<a href="Work"></a>
-			<a href="About Me"></a>
-			<a href="Contact"></a>
+			<a href="About Me">About Me</a>
+			<a href="Work">Work</a>
+			<a href="Downloads">Downloads</a>
+			<a href="Contact">Contacts</a>
 		</nav>
 	</header>
 	
 	<section id="splash">
 		<img src="images/direwolf.jpg" title="Direwolf" alt="Direwolf">
-		<h1 id="byline">Product Predator. Pack Designer. Hungry She-Wolf.</h1>
+		<h1 id="byline">Product Predator. Pack Designer. Insatiable She-Wolf.</h1>
 		<hr>
 	</section>
 
 	<section id="About Me">
 		<h2>About Me</h2>
-			<p>I work hard to turn an idea into a product that people can use. I have worked as a User Experience Designer and as a Product Designer for over five years. Understanding user journeies and needs, as well as stakeholder goals, and working with teams to create meaningful experiences is the essence of what I do. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:
+			<p>Turning an idea into a product that people can use is the essence of what I do. I have  over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:
 			<ul>
 				<li>Stakeholder Interviews</li>
 				<li>User Research</li>
@@ -56,6 +57,10 @@
 			<h3>Dot Dash 3</h3>
 			<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 		</section>
+	
+	<section id="Downloads">
+		<h2>Downloads</h2>
+		<p>Download full pdf <a href="#">here</a>.</p>
 	</section>
 
 	<section id="Contact">
@@ -63,9 +68,6 @@
 			<p>Linkedin</p>
 			<p>twitter</p>
 			<p>email</p>
-	</section>		
-		
-	</section>
-
+	</section>				
 </body>
 </html>
