update to full size hero and content

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,7 +8,6 @@
 	<header>
 		<div>
 			<p class="logo">ROXANNE MUSTAFA</p>
-			<p>Product Designer</p>
 		</div>
 		<nav>
 			<a href="About Me">About Me</a>
@@ -16,17 +15,18 @@
 			<a href="Downloads">Downloads</a>
 			<a href="Contact">Contacts</a>
 		</nav>
-	</header>
+	</header>	
 	
-	<section id="splash">
-		<img src="images/direwolf.jpg" title="Direwolf" alt="Direwolf">
-		<h1 id="byline">Product Predator. Pack Designer. Insatiable She-Wolf.</h1>
-		<hr>
+	<section id="hero">
+		<h1>Product Designer</h1>
+		<!-- <img src="images/direwolf.jpg" title="Direwolf" alt="Direwolf"> -->
+		<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
+		<p>LEARN MORE</p>
 	</section>
 
-	<section id="About Me">
+	<section id="about-me">
 		<h2>About Me</h2>
-			<p>Turning an idea into a product that people can use is the essence of what I do. I have  over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:
+		<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
 			<ul>
 				<li>Stakeholder Interviews</li>
 				<li>User Research</li>
@@ -38,11 +38,10 @@
 				<li>Lean Methodology</li>
 				<li>Agile Processess</li>
 				<li>Front-End Development</li>
-			</ol>
-			</p>
+			</ul>
 	</section>
 	
-	<section id="Work">
+	<section id="work">
 		<h2>Work</h2>
 		<section class="container">
 			<h3>Liquid Lab</h3>
@@ -58,16 +57,16 @@
 			<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 		</section>
 	
-	<section id="Downloads">
+	<section id="downloads">
 		<h2>Downloads</h2>
-		<p>Download full pdf <a href="#">here</a>.</p>
+		<p><a href="#">Download full pdf here</a>.</p>
 	</section>
 
-	<section id="Contact">
+	<section id="contact">
 		<h2>Contact</h2>
-			<p>Linkedin</p>
-			<p>twitter</p>
-			<p>email</p>
+			<a href="www.linkedin.com">Linkedin</a>
+			<a href="www.twitter.com">Twiter</a>
+			<a href="mustrock@gmail.com">Email</a>
 	</section>				
 </body>
 </html>
