--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,71 +2,35 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- <link rel="stylesheet" href="https://use.typekit.net/c/296299/1w;futura-pt,2,SH9:W:i4,SH4:W:i5,SH6:W:i7,SHD:W:i8,SHB:W:n3,Y5K:W:n4,SH3:W:n5,SH5:W:n7,SHC:W:n8;proxima-nova,2,2clzCB:W:i3,2clzCG:W:i4,2clzCJ:W:i6,2clzC6:W:i7,2clzC8:W:i8,2clzC4:W:i9,2clzCK:W:n1,2clzC9:W:n3,2clzCF:W:n4,2clzCH:W:n6,2clzC5:W:n7,2clzC7:W:n8,2clzC3:W:n9/l?3bb2a6e53c9684ffdc9a9bf21d5b2a62e197b8a35fd0ae87d83f8c6456444b21d72300a2f674a5b182568f1992f431365676130a95097c5043d366b1b4f0ed00f3e2667ba8450b91db70e00dc3184163077cef6d7ac11cf9ebbe0862e6fa454b2e463700a60ae8f74352f4d5127361171faaf3d49cd62b675660bcd0a9bb63eb98a531e53ae5d035dd281e645964c774573d4f" media="all"> -->
 	<title>Roxanne Mustafa</title>
 </head>
+
 <body>
-	<header>
-		<div>
-			<p class="logo">ROXANNE MUSTAFA</p>
-		</div>
-		<nav>
-			<a href="About Me">About Me</a>
-			<a href="Work">Work</a>
-			<a href="Downloads">Downloads</a>
-			<a href="Contact">Contacts</a>
-		</nav>
-	</header>	
+	<h1>ROXANNE MUSTAFA</h1>
+	<h2>Product Designer</h2>
+	<p id="byline">Effective Predator. Pack Designer. Hungry She-Wolf.</p>
+	<img src="images/snowolf.jpg">
+	<hr>
 	
-	<section id="hero">
-		<h1>Product Designer</h1>
-		<!-- <img src="images/direwolf.jpg" title="Direwolf" alt="Direwolf"> -->
-		<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
-		<p>LEARN MORE</p>
-	</section>
+	<div class="container">
+		<p>Project Section 1
+		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</p>
+	</div>
+	
+	<div class="container">
+		<p>Project Section 2
+		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</p>
+	
+	</div>
+		<div class="container">
+		<p>Project Section 3
+		<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</p>
+	</div>
 
-	<section id="about-me">
-		<h2>About Me</h2>
-		<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
-			<ul>
-				<li>Stakeholder Interviews</li>
-				<li>User Research</li>
-				<li>Competitive Analysis</li>
-				<li>Sketching</li>
-				<li>Prototyping</li>
-				<li>High Fildeity Mock-ups</li>
-				<li>Feature Prioritization</li>
-				<li>Lean Methodology</li>
-				<li>Agile Processess</li>
-				<li>Front-End Development</li>
-			</ul>
-	</section>
-	
-	<section id="work">
-		<h2>Work</h2>
-		<section class="container">
-			<h3>Liquid Lab</h3>
-			<p>Strategy and direction for users to get quick access to juice recipes and information.</p>
-			<a href="#" class="cta">See Project</a>
-		</section>
-		<section class="container">
-			<h3>Coldwell Banker</h3>
-			<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
-		</section>
-		<section class="container">
-			<h3>Dot Dash 3</h3>
-			<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
-		</section>
-	
-	<section id="downloads">
-		<h2>Downloads</h2>
-		<p><a href="#">Download full pdf here</a>.</p>
-	</section>
-
-	<section id="contact">
-		<h2>Contact</h2>
-			<a href="www.linkedin.com">Linkedin</a>
-			<a href="www.twitter.com">Twiter</a>
-			<a href="mustrock@gmail.com">Email</a>
-	</section>				
 </body>
+
 </html>
