--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -7,41 +7,35 @@
 <body>
 	<div class="wrapper">
 		<header>
-			<div class="logo">ROXANNE MUSTAFA</div>
-				<!-- should logo be an ID or class? -->
-				<!-- <p class="logo">ROXANNE MUSTAFA</p> -->
+			<p class="logo">ROXANNE MUSTAFA</p>
 			<nav>
-				<a href="About Me">About Me</a>
-				<a href="Work">Work</a>
-				<a href="Downloads">Downloads</a>
-				<a href="Contact">Contacts</a>
+				<a href="#about-me">About Me</a>
+				<a href="#work">Work</a>
+				<a href="#downloads">Downloads</a>
+				<a href="#contact">Contacts</a>
 			</nav>
 		</header>	
-		
 		<section id="hero">
 			<h1 id="title">Product Designer</h1>
-			<!-- <img src="images/direwolf.jpg" title="Direwolf" alt="Direwolf"> -->
 			<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
-			<button>LEARN MORE</button>
+			<a href="#" class="cta">LEARN MORE</a>
 		</section>
-
 		<section id="about-me">
 			<h2>About Me</h2>
 			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
-				<ul>
-					<li>Stakeholder Interviews</li>
-					<li>User Research</li>
-					<li>Competitive Analysis</li>
-					<li>Sketching</li>
-					<li>Prototyping</li>
-					<li>High Fildeity Mock-ups</li>
-					<li>Feature Prioritization</li>
-					<li>Lean Methodology</li>
-					<li>Agile Processess</li>
-					<li>Front-End Development</li>
-				</ul>
+			<ul>
+				<li>Stakeholder Interviews</li>
+				<li>User Research</li>
+				<li>Competitive Analysis</li>
+				<li>Sketching</li>
+				<li>Prototyping</li>
+				<li>High Fildeity Mock-ups</li>
+				<li>Feature Prioritization</li>
+				<li>Lean Methodology</li>
+				<li>Agile Processess</li>
+				<li>Front-End Development</li>
+			</ul>
 		</section>
-		
 		<section id="work">
 			<h2>Work</h2>
 			<section class="container">
@@ -69,11 +63,13 @@
 
 		<section id="contact">
 			<h2>Contact</h2>
-				<a href="www.linkedin.com">Linkedin</a>
-				<a href="www.twitter.com">Twiter</a>
-				<a href="mustrock@gmail.com">Email</a>
+			<a href="www.linkedin.com" target="_blank">Linkedin</a>
+			<a href="www.twitter.com" target="_blank">Twiter</a>
+			<a href="mustrock@gmail.com" target="_blank">Email</a>
 		</section>	
-		<footer>&copy Roxanne Mustafa</footer>
+		<footer>
+			<p>&copy; Roxanne Mustafa</p>
+		</footer>
 	</div>			
 </body>
 </html>
