--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -38,21 +38,27 @@
 		</section>
 		<section id="work">
 			<h2>Work</h2>
-			<section class="container">
-				<h3>Liquid Lab</h3>
-				<p>Strategy and direction for users to get quick access to juice recipes and information.</p>
-				<a href="#" class="cta">See Project</a>
-			</section>
-			<section class="container">
+			<section class="left">
 				<h3>Coldwell Banker</h3>
 				<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 				<a href="#" class="cta">See Project</a>
 			</section>
-			<section class="container">
+			<section class="right">
 				<h3>Dot Dash 3</h3>
 				<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 				<a href="#" class="cta">See Project</a>
 			</section>
+			<section class="container">
+				<h3>Liquid Lab</h3>
+				<p>A website for LiquidLab that provides juice recipes and information for health conscious users. The main objective is to provide highly customizable profiles for users to get quick access to juice recipes and information.</p>
+				<a href="#" class="cta">See Project</a>
+			</section>
+			<section class="container">
+				<h3>Instagram Print</h3>
+				<p>A reinvisioning of Instagram to include a print feature.</p>
+				<a href="#" class="cta">See Project</a>
+			</section>			
+
 		</section>
 		
 		<section id="downloads">
