--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -36,19 +36,19 @@
 				<li>Front-End Development</li>
 			</ul>
 		</section>
-		<section id="work">
+		<section id="work" class=“clearfix”>
 			<h2>Work</h2>
-			<section class="left">
+			<section id="left">
 				<h3>Coldwell Banker</h3>
 				<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 				<a href="#" class="cta">See Project</a>
 			</section>
-			<section class="right">
+			<section id="right">
 				<h3>Dot Dash 3</h3>
 				<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 				<a href="#" class="cta">See Project</a>
 			</section>
-			<section class="container">
+			<!-- <section class="container"> 
 				<h3>Liquid Lab</h3>
 				<p>A website for LiquidLab that provides juice recipes and information for health conscious users. The main objective is to provide highly customizable profiles for users to get quick access to juice recipes and information.</p>
 				<a href="#" class="cta">See Project</a>
@@ -57,8 +57,7 @@
 				<h3>Instagram Print</h3>
 				<p>A reinvisioning of Instagram to include a print feature.</p>
 				<a href="#" class="cta">See Project</a>
-			</section>			
-
+			</section>-->
 		</section>
 		
 		<section id="downloads">
