--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -36,7 +36,7 @@
 				<li>Front-End Development</li>
 			</ul>
 		</section>
-		<section id="work" class=“clearfix”>
+		<section id="work" class="clearfix">
 			<h2>Work</h2>
 			<section id="left">
 				<h3>Coldwell Banker</h3>
