--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -24,7 +24,7 @@
 			<h2>About Me</h2>
 			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
 			<ul>
-				<li>Stakeholder Interviews</li>
+				<li>Strategy</li>
 				<li>User Research</li>
 				<li>Competitive Analysis</li>
 				<li>Sketching</li>
