--- a/unit_6/class materials/My example/index.html
+++ b/unit_6/class materials/My example/index.html
@@ -6,34 +6,39 @@
 </head>
 <body>
 	<div id="container">
-		<h1>Example</h1>
-		
-		<div id="one">
-			<p>Section 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		
-		<div id="two">
-			<p>Section 2 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
-		</div>
-		
-		<div id="three">
-			<p>Section 3 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
-		</div>
-		<div id="four">
-			<p>4</p>		
-		</div>
-		<div id="five">
-			<p>5</p>		
-		</div>
+		<section id="section1">
+			<h1>Example</h1>
+			<article id="one">
+				<h2>Section 1</h2>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
+			</article>
+			
+			<article id="two">
+				<h2>Section 2</h2>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>	
+			</article>
+			
+			<article id="three">
+				<h2>Section 3</h2>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
+			</article>
+			<article id="four">
+				<h2>Section 4</h2>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
+			</article>
+			<article id="five">
+				<h2>Section 5</h2>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
+		</section>
+
+		<section id="section2">
+			<h1>Image Gallery</h1>
+			<img src="images/jon_snow.jpg" alt="Jon Snow">
+			<img src="images/jon_snow.jpg" alt="Jon Snow">
+			<img src="images/jon_snow.jpg" alt="Jon Snow">
+			<img src="images/jon_snow.jpg" alt="Jon Snow">
+			<img src="images/jon_snow.jpg" alt="Jon Snow">
+		</section>
 	</div>
 
 </body>
