--- a/example/index.html
+++ b/example/index.html
@@ -16,8 +16,7 @@
 			<article id="two">
 				<h2>Section 2</h2>
 				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>	
-			</article>
-			
+			</article>	
 			<article id="three">
 				<h2>Section 3</h2>
 				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
@@ -29,11 +28,31 @@
 			<article id="five">
 				<h2>Section 5</h2>
 				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
+			</article>
+			<article id="six">
+				<h2>Section 6</h2>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo.</p>
+			</article>
 		</section>
 
 		<section id="section2">
 			<h1>Image Gallery</h1>
-			<img src="images/jon_snow.jpg" alt="Jon Snow">
+			<img src="images/jon_and_ghost.jpg" alt="Jon Snow and Ghost">
+			<img src="images/rob_and_greywind.jpg" alt="Robb Stark and Grey Wind">
+			<img src="images/arya_and_nymeria.jpg" alt="Arya Stark and Nymeria">
+			<img src="images/bran_and_summer.jpg" alt="Brandon Stark and Summer">
+			<img src="images/jon_and_ghost.jpg" alt="Jon Snow and Ghost">
+			<img src="images/rob_and_greywind.jpg" alt="Robb Stark and Grey Wind">
+			<img src="images/arya_and_nymeria.jpg" alt="Arya Stark and Nymeria">
+			<img src="images/bran_and_summer.jpg" alt="Brandon Stark and Summer">
+			<img src="images/jon_and_ghost.jpg" alt="Jon Snow and Ghost">
+			<img src="images/rob_and_greywind.jpg" alt="Robb Stark and Grey Wind">
+			<img src="images/arya_and_nymeria.jpg" alt="Arya Stark and Nymeria">
+			<img src="images/bran_and_summer.jpg" alt="Brandon Stark and Summer">
+			<img src="images/jon_and_ghost.jpg" alt="Jon Snow and Ghost">
+			<img src="images/rob_and_greywind.jpg" alt="Robb Stark and Grey Wind">
+			<img src="images/arya_and_nymeria.jpg" alt="Arya Stark and Nymeria">
+			<img src="images/bran_and_summer.jpg" alt="Brandon Stark and Summer">
 			<img src="images/jon_snow.jpg" alt="Jon Snow">
 			<img src="images/jon_snow.jpg" alt="Jon Snow">
 			<img src="images/jon_snow.jpg" alt="Jon Snow">
