--- a/example/index.html
+++ b/example/index.html
@@ -10,27 +10,27 @@
 			<h1>Example</h1>
 			<article id="one">
 				<h2>Section 1</h2>
-				<p>Aegon ros strong belwas robb donal noye night's king roose bolton daenerys pycelle tyene. Rhaegal oswell whent craster wyman manderly jon connington ygritte victarion quentyn bloodraven grey worm jaqen. Sandor bloodraven viserys melisandre, craster varamyr davos rhaegal jeor mormont lady. Rhaegal viserys euron ros shireen orell. Wights ramsay myrcella lyanna sandor. Renly tyrion joffrey jorah eddard dunk greywind robert baratheon hoster tully ramsay summer jaqen arthur dayne bael the bard.</p>
+				<p>Aegon ros strong belwas robb donal noye night's king roose bolton daenerys pycelle tyene. Rhaegal oswell whent craster wyman manderly jon connington ygritte victarion quentyn bloodraven grey worm jaqen. Sandor bloodraven viserys melisandre, craster varamyr davos rhaegal jeor mormont lady. Rhaegal viserys euron ros shireen orell. </p>
 			</article>	
 			<article id="two">
 				<h2>Section 2</h2>
-				<p>Shaggydog brienne ygritte cersei rickard hodor mance rayder quentyn maegor bael the bard davos illyrio jaqen jon connington. Tyrion rickon loras, donal noye wyman manderly drogon dolorous edd yoren. Orell daenerys barristan gilly arianne jon snow gregor dunk aeron syrio forel. Lysa orell pycelle ashara stannis benjen samwell lady aeron littlefinger syrio forel dontos hollard oswell whent. Aerys gerold hightower aemon thoros quentyn brienne. Samwell roose bolton pate edmure balon, baelor old nan beric dondarrion walder frey rodrik podrick.</p>	
+				<p>Shaggydog brienne ygritte cersei rickard hodor mance rayder quentyn maegor bael the bard davos illyrio jaqen jon connington. Tyrion rickon loras, donal noye wyman manderly drogon dolorous edd yoren. Orell daenerys barristan gilly arianne.</p>	
 			</article>	
 			<article id="three">
 				<h2>Section 3</h2>
-				<p>Arianne robb Wun Weg Wun Dar Wun pycelle, aegon samwell lord of bones shae alliser thorne oswell whent varamyr orell baelor. Tommen barristan davos, summer maegor daeron howland reed. The hound alliser thorne ygritte white walkers dagmer cleftjaw shireen. Edmure shae ashara jaqen elia podrick. Dunk samwell nymeria, shireen lyanna howland reed shaggydog brave companions bran hoster tully maegor tyrion summer freefolk. Arianne barristan victarion yoren syrio forel davos.</p>
+				<p>Arianne robb Wun Weg Wun Dar Wun pycelle, aegon samwell lord of bones shae alliser thorne oswell whent varamyr orell baelor. Tommen barristan davos, summer maegor daeron howland reed. The hound alliser thorne ygritte white walkers dagmer cleftjaw shireen.</p>
 			</article>
 			<article id="four">
 				<h2>Section 4</h2>
-				<p>Gerold hightower dagmer cleftjaw oberyn myrcella walder frey tommen aeron drogon. Syrio forel egg osha orell, alliser thorne qhorin halfhand lady baelor daeron yoren aeron hoster tully brandon stark oberyn robb. Donal noye tommen thoros davos. Orell alliser thorne elia shireen summer asha. Ramsay benjen tommen kevan. Meera reed obara quentyn arthur dayne ghost gerold hightower Wun Weg Wun Dar Wun ros eddard brandon stark jon snow rickon arianne.</p>
+				<p>Gerold hightower dagmer cleftjaw oberyn myrcella walder frey tommen aeron drogon. Syrio forel egg osha orell, alliser thorne qhorin halfhand lady baelor daeron yoren aeron hoster tully brandon stark oberyn robb. Donal noye tommen thoros davos. </p>
 			</article>
 			<article id="five">
 				<h2>Section 5</h2>
-				<p>Tommen victarion loras mya stone. Oberyn jon connington tommen lysa. Nymeria daeron orell jaqen thoros howland reed drogon cersei meryn trant kevan. Ros alliser thorne thoros daeron bronn littlefinger gendry aeron bloodraven rodrik shae. Arianne walder frey bronn chett davos bael the bard catelyn daenerys. Oswell whent gilly alliser thorne rickard aemon. Night's king thoros viserion melisandre shaggydog aegon chett rhaegar rhaenyra tyene.</p>
+				<p>Tommen victarion loras mya stone. Oberyn jon connington tommen lysa. Nymeria daeron orell jaqen thoros howland reed drogon cersei meryn trant kevan. Ros alliser thorne thoros daeron bronn littlefinger gendry aeron bloodraven rodrik shae.</p>
 			</article>
 			<article id="six">
 				<h2>Section 6</h2>
-				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. Our knees do not bend easily hot pie the lone wolf dies but the pack survives fear cuts deeper than swords khal drogo. Walder frey fat walda bran, melisandre rickard gendry ros egg aenys gerold hightower brienne podrick jon snow cersei alliser thorne ghost orell. </p>
+				<p>Highgarden grey worm eyrie the knights of summer fist of the first men haunted forest ros arthur dayne. You know nothing mya stone a thousand eyes and one the knights of summer varamyr shaggydog. </p>
 			</article>
 		</section>
 
