making site fluid

--- a/unit_8/Website/index.html
+++ b/unit_8/Website/index.html
@@ -19,6 +19,7 @@
 		<section id="hero">
 			<h1 id="title">Product Designer</h1>
 			<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
+<!-- Why is the a cta class and not a button tag? -->
 			<a href="#" class="cta">LEARN MORE</a>
 		</section>
 		<section id="about-me">
