compare unit 6 and 8

--- a/unit_8/8/index.html
+++ b/unit_8/8/index.html
@@ -32,10 +32,9 @@
 				<li>Sketching</li>
 				<li>Prototyping</li>
 				<li>High Fildeity Mock-ups</li>
-				<li>Feature Prioritization</li>
+				<li>User-Centered Design</li>
 				<li>Lean Methodology</li>
-				<li>Agile Processess</li>
-				<li>Front-End Development</li>
+				<li>Agile Process</li>
 			</ul>
 		</section>
 		<section id="work" class="clearfix">
