clean desktop changes (no media queries)

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -48,7 +48,8 @@
 				<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 				<a href="#" class="cta">See Project</a>
 			</section>
-			<!-- <section class="container"> 
+			<!-- How do we set these up in the grid
+			<section class="container"> 
 				<h3>Liquid Lab</h3>
 				<p>A website for LiquidLab that provides juice recipes and information for health conscious users. The main objective is to provide highly customizable profiles for users to get quick access to juice recipes and information.</p>
 				<a href="#" class="cta">See Project</a>
