--- a/unit_8/8/index.html
+++ b/unit_8/8/index.html
@@ -7,21 +7,23 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header>
-			<p class="logo">ROXANNE MUSTAFA</p>
-			<nav>
-				<a href="#about-me">About Me</a>
-				<a href="#work">Work</a>
-				<a href="#downloads">Downloads</a>
-				<a href="#contact">Contacts</a>
-			</nav>
-		</header>	
-		<section id="hero">
-			<h1 id="title">Product Designer</h1>
-			<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
-<!-- Why is the a cta class and not a button tag? -->
-			<a href="#" class="cta">LEARN MORE</a>
-		</section>
+		<div id="heroborder">
+			<section id="hero">
+				<header>
+					<p class="logo">ROXANNE MUSTAFA</p>
+				<nav>
+					<a href="#about-me">About Me</a>
+					<a href="#work">Work</a>
+					<a href="#downloads">Downloads</a>
+					<a href="#contact">Contacts</a>
+				</nav>
+			</header>	
+				<h1 id="title">Product Designer</h1>
+				<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
+	<!-- Why is the a cta class and not a button tag? -->
+				<a href="#" class="cta">LEARN MORE</a>
+			</section>
+		</div>
 		<section id="about-me">
 			<h2>About Me</h2>
 			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
