cleaning up code, media queries incomplete

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -17,9 +17,8 @@
 					<a href="#contact">Contacts</a>
 				</nav>
 		</header>	
-			<h1 id="title">Product Designer</h1>
+			<h1>Product Designer</h1>
 			<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
-<!-- Why is the a cta class and not a button tag? -->
 			<a href="#about-me" class="primarybutton">LEARN MORE</a>
 		</section>
 	</div>
@@ -44,37 +43,37 @@
 		</section>
 		<section id="work" class="clearfix">
 			<h2>Work</h2>
-			<article id="proj1">
+			<section id="proj1">
 				<h3>Coldwell Banker</h3>
 					<div id="projectborder">
 						<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 						<a href="#" class="secondarybutton">See Project</a>
 					</div>
-			</article>
+			</section>
 
-			<article id="proj2"> 
+			<section id="proj2"> 
 				<h3>Liquid Lab</h3>
 				<div id="projectborder">
 					<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
-			</article>
+			</section>
 
-			<article id="proj3">
+			<section id="proj3">
 				<h3>Dot Dash 3</h3>
 				<div id="projectborder">
 					<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
-			</article>
+			</section>
 
-			<article class="proj4">
+			<section class="proj4">
 				<h3>Instagram Print</h3>
 				<div id="projectborder">
 					<p>A reinvisioning of Instagram to include a print feature.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
-			</article>
+			</section>
 
 			<section id="downloads" class="clearfix">
 				<h2>Downloads</h2>
